tests/paczka2/big_fuzzy/30843194.err
Error in line 3: A247 A247 53,88
Error in line 5: A247 A247 157,1
Error in line 10: RhXIKEa A247 72,0
Error in line 19: 0ve8Yk A247 26,6
Error in line 24: 0ve8Yk S887 18,5
Error in line 22: aAoJvMlADd1 A247 2,5
Error in line 38: 2MRqcND S744 22,4
Error in line 42: 2MRqcND S887 61,0
Error in line 45: d8FK A209 9,1
Error in line 47: d8FK S887 44,2
Error in line 53: FR1 A209 21,9
Error in line 73: A247 S887 60,7
Error in line 78: A247 S744 51,4
Error in line 75: FR1 S887 94,4
Error in line 86: FR1 A209 27,4
Error in line 91: RhXIKEa S744 79,1
Error in line 97: aAoJvMlADd1 A209 23,9
Error in line 87: FR1 A247 67,4
Error in line 101: aAoJvMlADd1 A247 39,3
Error in line 114: aAoJvMlADd1 S887 62,7
Error in line 122: 2MRqcND S744 23,2
Error in line 123: 2MRqcND S887 78,8
Error in line 133: FR1 S887 49,3
Error in line 132: d8FK A247 62,9
Error in line 126: 2MRqcND S744 82,2
Error in line 139: 2MRqcND A209 39,1
Error in line 149: d8FK S744 92,4
Error in line 146: 0ve8Yk A209 93,8
Error in line 155: FR1 S887 2,5
Error in line 144: 2MRqcND S887 8,3
Error in line 178: aAoJvMlADd1 A247 90,2
Error in line 179: aAoJvMlADd1 S887 54,2
Error in line 194: 0ve8Yk A247 206,1
Error in line 193: A247 A247 39,5
Error in line 204: A247 A209 30,3
Error in line 203: RhXIKEa A209 44,4
Error in line 197: aAoJvMlADd1 A247 59,3
Error in line 212: aAoJvMlADd1 S744 299,61
Error in line 213: FR1 A247 77,7
Error in line 220: 2MRqcND A247 98,9
Error in line 218: RhXIKEa A247 61,7
Error in line 225: 0ve8Yk A247 95,98
Error in line 226: d8FK S744 19,0
Error in line 238: RhXIKEa S887 14,0
Error in line 245: RhXIKEa A247 93,8
